compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__pipes__multiple_pipes.snap
---
source: compiler-core/src/erlang/tests/pipes.rs
expression: "\npub fn main() {\n  1 |> x |> x\n  2 |> x |> x\n}\n\nfn x(x) { x }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  1 |> x |> x
  2 |> x |> x
}

fn x(x) { x }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 7).
-spec x(K) -> K.
x(X) ->
    X.

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    _pipe = 1,
    _pipe@1 = x(_pipe),
    x(_pipe@1),
    _pipe@2 = 2,
    _pipe@3 = x(_pipe@2),
    x(_pipe@3).
